// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a navigation menu with an Express vulnerabilities link 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-light bg-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        React Test Bench
      </a>
      <button
        aria-controls="nav-collapse"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="nav-collapse"
      >
        <div
          class="navbar-nav"
        >
          <div
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              id="nav-browser-vulns"
              role="button"
            >
              Browser Vulnerabilities
            </a>
          </div>
          <a
            class="nav-link"
            href="/server-vulnerabilities"
          >
            Express
             Vulnerabilities
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`renders a navigation menu with server vulnerabilities placeholder link 1`] = `
<div>
  <nav
    class="navbar navbar-expand-md navbar-light bg-light"
  >
    <div
      class="container"
    >
      <a
        class="navbar-brand"
        href="/"
      >
        React Test Bench
      </a>
      <button
        aria-controls="nav-collapse"
        aria-label="Toggle navigation"
        class="navbar-toggler collapsed"
        type="button"
      >
        <span
          class="navbar-toggler-icon"
        />
      </button>
      <div
        class="navbar-collapse collapse"
        id="nav-collapse"
      >
        <div
          class="navbar-nav"
        >
          <div
            class="nav-item dropdown"
          >
            <a
              aria-expanded="false"
              aria-haspopup="true"
              class="dropdown-toggle nav-link"
              href="#"
              id="nav-browser-vulns"
              role="button"
            >
              Browser Vulnerabilities
            </a>
          </div>
          <a
            aria-disabled="true"
            class="nav-link disabled"
            href="#"
            role="button"
            tabindex="-1"
          >
            Server Vulnerabilities
          </a>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
